# dash-app

./: .dockerignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
app/app/: index.py  main.py
app/app/database/: transforms.py
app/app/tabs/: sidepanel.py  tab1.py  tab2.py
